(feat) add tokens foundation

--- a/packages/foundation/package.json
+++ b/packages/foundation/package.json
@@ -1,7 +1,11 @@
 {
   "name": "@canvas-ds/foundation",
   "packageManager": "yarn@3.6.1",
+  "scripts": {
+    "build-tokens": "style-dictionary build --config sd.config.js"
+  },
   "devDependencies": {
+    "style-dictionary": "^3.8.0",
     "typescript": "^5.1.6"
   }
 }
