--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -9,19 +9,20 @@
   "devDependencies": {
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
-    "@storybook/addon-a11y": "^7.2.2",
-    "@storybook/addon-essentials": "^7.2.2",
-    "@storybook/addon-interactions": "^7.2.2",
-    "@storybook/addon-links": "^7.2.2",
+    "@babel/preset-typescript": "^7.22.5",
+    "@storybook/addon-a11y": "^7.3.2",
+    "@storybook/addon-essentials": "^7.3.2",
+    "@storybook/addon-interactions": "^7.3.2",
+    "@storybook/addon-links": "^7.3.2",
     "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/blocks": "^7.2.2",
-    "@storybook/react": "^7.2.2",
-    "@storybook/react-webpack5": "^7.2.2",
+    "@storybook/blocks": "^7.3.2",
+    "@storybook/react": "^7.3.2",
+    "@storybook/react-webpack5": "^7.3.2",
     "@storybook/testing-library": "^0.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.2.2"
+    "storybook": "^7.3.2"
   },
   "scripts": {
     "storybook": "storybook dev -p 6006",
