--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -4,19 +4,30 @@
   "scripts": {
     "build": "yarn build:css && tsc",
     "watch:css": "npx tailwindcss -i ./src/input.css -o ./lib/output.css --watch",
-    "build:css": "npx tailwindcss -i ./src/input.css -o ./lib/output.css"
+    "build:css": "npx tailwindcss -i ./src/input.css -o ./lib/output.css",
+    "test": "jest"
   },
   "dependencies": {
     "@canvas-ds/foundation": "workspace:^",
     "styled-components": "^6.0.7"
   },
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "resolutions": {
     "styled-components": "^5"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@testing-library/jest-dom": "^6.0.1",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.26",
+    "jest": "^29.6.3",
+    "jest-environment-jsdom": "^29.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3",
