--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,18 @@
     "removeComments": false,
     "sourceMap": true,
     "module": "ESNext",
-    "lib": ["esnext", "dom"],
+    "lib": [
+      "esnext",
+      "dom"
+    ],
     "baseUrl": ".",
     "paths": {
-      "@canvas-ds/*": ["packages/*/lib"]
+      "@canvas-ds/*": [
+        "packages/*/lib"
+      ]
     }
   },
-  "exclude": ["node_modules", "**/*.test.*"]
+  "exclude": [
+    "node_modules"
+  ]
 }
