--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -23,10 +23,12 @@
     "@testing-library/jest-dom": "^6.0.1",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.3",
+    "@types/jest-axe": "^3.5.5",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.26",
     "jest": "^29.6.3",
+    "jest-axe": "^8.0.0",
     "jest-environment-jsdom": "^29.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
