(feat) test CI/CD

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@canvas-ds/react",
+  "version": "0.0.1",
   "packageManager": "yarn@3.6.1",
   "scripts": {
     "build": "yarn build:css && tsc",
