--- a/packages/foundation/package.json
+++ b/packages/foundation/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@canvas-ds/foundation",
+  "version": "0.0.1",
   "packageManager": "yarn@3.6.1",
   "scripts": {
     "build-tokens": "style-dictionary build --config sd.config.js",
