--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -11,13 +11,21 @@ jobs:
     runs-on: ubuntu-latest  # Change to the desired runner environment
 
     steps:
-      - name: Checkout code
+      - name: Checkout code with full Git history
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Disable shallow fetch to access full Git history
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18.17.0  # Adjust to your Node.js version
+
+      - name: Install dependencies
+        run: npm install
 
       - name: Publish to Chromatic
         uses: chromaui/action@v1
-
         with:
-          # Chromatic projectToken, refer to the manage page to obtain it.
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-          workingDir: packages/storybook
+          workingDir: packages/storybook  # Adjust to your Storybook directory
