--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: 18.17.0  # Adjust to your Node.js version
 
       - name: Install dependencies
-        run: npm install
+        run: yarn
 
       - name: Publish to Chromatic
         uses: chromaui/action@v1
