--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -1,31 +1,37 @@
-name: Publish to Chromatic
+# .github/workflows/chromatic.yml
 
+# Workflow name
+name: 'Chromatic'
+
+# Event for the workflow
 on:
   push:
     branches:
-      - main  # Adjust the branch name as needed
+      - main
 
+# List of jobs
 jobs:
-  chromatic:
-    name: Publish to Chromatic
-    runs-on: ubuntu-latest  # Change to the desired runner environment
-
+  chromatic-deployment:
+    # Operating System
+    runs-on: ubuntu-latest
+    # Job steps
     steps:
       - name: Checkout code with full Git history
         uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Disable shallow fetch to access full Git history
-
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: 18.17.0  # Adjust to your Node.js version
-
       - name: Install dependencies
+        # 👇 Install dependencies with the same package manager used in the project (replace it as needed), e.g., yarn, npm, pnpm
         run: yarn
-
-      - name: Publish to Chromatic
+        # 👇 Adds Chromatic as a step in the workflow
+      - name: Publish Storybook to Chromatic
         uses: chromaui/action@v1
+        # Chromatic GitHub Action options
         with:
+          # 👇 Chromatic projectToken, refer to the manage page to obtain it.
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
           workingDir: packages/storybook  # Adjust to your Storybook directory
